--- a/index.html
+++ b/index.html
@@ -3,104 +3,97 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>한국 드라마 퀴즈</title>
+    <title>한국 드라마 퀴즈 </title>
     <style>
-        /* 전체 body 스타일 */
+        /* 선택지를 파란색으로 변경하는 CSS */
+        .selected {
+            color: blue;
+            cursor: pointer;
+        }
+
+        /* 퀴즈 영역 스타일 */
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f8f9fa;
             text-align: center;
         }
 
-        /* 헤더 스타일 */
         h1 {
-            margin-top: 30px;
-            color: #007bff;
-            font-size: 36px;
-        }
-
-        /* 질문 영역 스타일 */
-        .question-container {
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            margin: 20px auto;
-            max-width: 600px;
+            margin-top: 20px;
         }
 
         h2 {
-            color: #333;
-            font-size: 24px;
-            margin-bottom: 15px;
+            margin-top: 30px;
         }
 
         p {
             margin: 10px 0;
-            font-size: 18px;
-            color: #555;
         }
 
-        /* 선택지 스타일 */
         ul {
             list-style-type: none;
             padding: 0;
-            margin: 0;
-            text-align: left;
         }
 
         li {
             margin-top: 10px;
-            font-size: 20px;
-            color: #333;
-            cursor: pointer;
-            transition: color 0.3s;
         }
 
+        /* 선택지 마우스 호버 스타일 */
         li:hover {
-            color: #007bff;
-        }
-
-        /* 선택된 항목 스타일 */
-        .selected {
-            color: #007bff;
-            font-weight: bold;
+            color: darkblue;
         }
     </style>
 </head>
 <body>
     <h1>한국 드라마 퀴즈</h1>
 
-    <!-- 질문 영역 -->
-    <div class="question-container">
-        <h2>질문 1:</h2>
-        <p id="question1">어느 한국 드라마에서 여자가 유령을 볼 수 있는 능력을 가졌나요?</p>
-        <ul>
-            <li id="q1a" onclick="checkAnswer('question1', 'q1a')">a) 꽃보다 남자</li>
-            <li id="q1b" onclick="checkAnswer('question1', 'q1b')">b) 주군의 태양</li>
-            <li id="q1c" onclick="checkAnswer('question1', 'q1c')">c) 별에서 온 그대</li>
-        </ul>
-    </div>
+    <h2>질문 1:</h2>
+    <p id="question1">어느 한국 드라마에서 여자가 유령을 볼 수 있는 능력을 가졌나요?</p>
+    <ul>
+        <li id="q1a">a) 꽃보다 남자</li>
+        <li id="q1b">b) 주군의 태양</li>
+        <li id="q1c">c) 별에서 온 그대</li>
+    </ul>
+
+    <!-- 나머지 질문들도 유사한 패턴으로 구성 -->
 
     <script>
-        // 정답 체크 함수
-        function checkAnswer(questionId, selectedId) {
-            // 선택한 요소를 파란색으로 변경
-            var selectedElement = document.getElementById(selectedId);
-            selectedElement.classList.add('selected');
+        // 각 질문의 정답을 정의합니다.
+        var answers = {
+            question1: 'q1b',
+            question2: 'q2b'
+            // 나머지 질문들도 유사한 방식으로 정의
+        };
 
-            // 정답 확인
+        // 선택지를 클릭했을 때 호출되는 함수
+        function checkAnswer(questionId, selectedId) {
+            // 선택한 요소를 파란색으로 변경합니다.
+            document.getElementById(selectedId).classList.add('selected');
+            // 정답을 확인합니다.
             var answerId = answers[questionId];
             if (selectedId === answerId) {
                 alert('정답입니다!');
-                // 정답인 경우 다음 화면으로 이동
+                // 정답인 경우 다음 화면으로 이동합니다.
                 window.location.href = 'index1.html';
             } else {
                 alert('틀렸습니다!');
             }
         }
+
+        // 각 선택지에 클릭 이벤트를 추가합니다.
+        document.getElementById('q1a').addEventListener('click', function() {
+            checkAnswer('question1', 'q1a');
+        });
+        document.getElementById('q1b').addEventListener('click', function() {
+            checkAnswer('question1', 'q1b');
+        });
+        document.getElementById('q1c').addEventListener('click', function() {
+            checkAnswer('question1', 'q1c');
+        });
+        // 나머지 선택지들도 유사한 방식으로 추가
+
     </script>
 </body>
 </html>
